--- a/src/css/main.css
+++ b/src/css/main.css
@@ -267,6 +267,17 @@ div#color {
     color: red;
     line-height: 18px !important;
     font-size: 12px !important;
+    white-space: nowrap;
+    width: 66px;
+}
+.color-box span {
+    float: left;
+    width: 10px;
+    height: 10px;
+    border: 1px solid #CCC;
+    border-radius: 2px;
+    margin-top: 2px;
+    margin-right: 3px;
 }
 .color-box::before {
     position: absolute;
