--- a/src/css/main.css
+++ b/src/css/main.css
@@ -330,6 +330,7 @@ div#color {
     font-style: 16px;
     border-radius: 8px;
     box-shadow: 3px 3px 5px #CCC;
+    font-size: 14px;
     
     top: 0;
     left: 0;
